# fastapi_labs

fastapi_lab2/: Dockerfile  commands_lab2.txt  docker-compose.yml  git_logs.txt  main.py
fastapi_lab3/: Dockerfile  pyproject.toml
fastapi_lab3/app/api/v1/: router.py
fastapi_lab3/app/api/v1/endpoints/: users.py
fastapi_lab4/: pyproject.toml
fastapi_lab4/alembic/versions/: 760e6ad3d3a4_create_tables.py
fastapi_lab4/app/: main.py
fastapi_lab4/app/core/: config.py
fastapi_lab4/app/db/: base.py  session.py
fastapi_lab4/app/models/: domain.py
fastapi_lab4/app/schemas/: domain.py  user.py
fastapi_lab5/: pyproject.toml
fastapi_lab5/alembic/: env.py
fastapi_lab5/app/: seed.py
fastapi_lab5/app/api/: deps.py
fastapi_lab5/app/api/v1/endpoints/: auth.py  users.py
fastapi_lab5/app/core/: config.py  security.py
fastapi_lab5/app/schemas/: domain.py
